SlangNet.Bindings/Generated/Slang.cs


    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeParameter_GetName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeParameter_GetName", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* ReflectionTypeParameter_GetName(SlangReflectionTypeParameter* typeParam);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeParameter_GetIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeParameter_GetIndex", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionTypeParameter_GetIndex(SlangReflectionTypeParameter* typeParam);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeParameter_GetConstraintCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeParameter_GetConstraintCount", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint ReflectionTypeParameter_GetConstraintCount(SlangReflectionTypeParameter* typeParam);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ReflectionTypeParameter_GetConstraintByIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflectionTypeParameter_GetConstraintByIndex", ExactSpelling = true)]
    public static extern SlangReflectionType* ReflectionTypeParameter_GetConstraintByIndex(SlangReflectionTypeParameter* typeParam, [NativeTypeName("unsigned int")] uint index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_GetParameterCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_GetParameterCount", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Reflection_GetParameterCount([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_GetParameterByIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_GetParameterByIndex", ExactSpelling = true)]
    [return: NativeTypeName("SlangReflectionParameter *")]
    public static extern SlangReflectionVariableLayout* Reflection_GetParameterByIndex([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection, [NativeTypeName("unsigned int")] uint index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_GetTypeParameterCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_GetTypeParameterCount", ExactSpelling = true)]
    [return: NativeTypeName("unsigned int")]
    public static extern uint Reflection_GetTypeParameterCount([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_GetTypeParameterByIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_GetTypeParameterByIndex", ExactSpelling = true)]
    public static extern SlangReflectionTypeParameter* Reflection_GetTypeParameterByIndex([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection, [NativeTypeName("unsigned int")] uint index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_FindTypeParameter"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_FindTypeParameter", ExactSpelling = true)]
    public static extern SlangReflectionTypeParameter* Reflection_FindTypeParameter([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection, [NativeTypeName("const char *")] sbyte* name);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_FindTypeByName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_FindTypeByName", ExactSpelling = true)]
    public static extern SlangReflectionType* Reflection_FindTypeByName([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection, [NativeTypeName("const char *")] sbyte* name);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_GetTypeLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_GetTypeLayout", ExactSpelling = true)]
    public static extern SlangReflectionTypeLayout* Reflection_GetTypeLayout([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection, SlangReflectionType* reflectionType, SlangLayoutRules rules);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_getEntryPointCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_getEntryPointCount", ExactSpelling = true)]
    [return: NativeTypeName("SlangUInt")]
    public static extern ulong Reflection_getEntryPointCount([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_getEntryPointByIndex"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_getEntryPointByIndex", ExactSpelling = true)]
    [return: NativeTypeName("SlangReflectionEntryPoint *")]
    public static extern SlangEntryPointLayout* Reflection_getEntryPointByIndex([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection, [NativeTypeName("SlangUInt")] ulong index);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_findEntryPointByName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_findEntryPointByName", ExactSpelling = true)]
    [return: NativeTypeName("SlangReflectionEntryPoint *")]
    public static extern SlangEntryPointLayout* Reflection_findEntryPointByName([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection, [NativeTypeName("const char *")] sbyte* name);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_getGlobalConstantBufferBinding"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_getGlobalConstantBufferBinding", ExactSpelling = true)]
    [return: NativeTypeName("SlangUInt")]
    public static extern ulong Reflection_getGlobalConstantBufferBinding([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_getGlobalConstantBufferSize"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_getGlobalConstantBufferSize", ExactSpelling = true)]
    [return: NativeTypeName("size_t")]
    public static extern UIntPtr Reflection_getGlobalConstantBufferSize([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_specializeType"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_specializeType", ExactSpelling = true)]
    public static extern SlangReflectionType* Reflection_specializeType([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection, SlangReflectionType* type, [NativeTypeName("SlangInt")] long specializationArgCount, [NativeTypeName("SlangReflectionType *const *")] SlangReflectionType** specializationArgs, ISlangBlob** outDiagnostics);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_getHashedStringCount"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_getHashedStringCount", ExactSpelling = true)]
    [return: NativeTypeName("SlangUInt")]
    public static extern ulong Reflection_getHashedStringCount([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_getHashedString"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_getHashedString", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* Reflection_getHashedString([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection, [NativeTypeName("SlangUInt")] ulong index, [NativeTypeName("size_t *")] UIntPtr* outCount);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ComputeStringHash"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spComputeStringHash", ExactSpelling = true)]
    [return: NativeTypeName("SlangUInt32")]
    public static extern uint ComputeStringHash([NativeTypeName("const char *")] sbyte* chars, [NativeTypeName("size_t")] UIntPtr count);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_getGlobalParamsTypeLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_getGlobalParamsTypeLayout", ExactSpelling = true)]
    public static extern SlangReflectionTypeLayout* Reflection_getGlobalParamsTypeLayout([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Reflection_getGlobalParamsVarLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spReflection_getGlobalParamsVarLayout", ExactSpelling = true)]
    public static extern SlangReflectionVariableLayout* Reflection_getGlobalParamsVarLayout([NativeTypeName("SlangReflection *")] SlangProgramLayout* reflection);

    public const int kSessionFlags_None = 0;
    public const int kSessionFlag_FalcorCustomSharedKeywordSemantics = 1 << 0;

    /// <include file='Slang.xml' path='doc/member[@name="Slang.slang_createGlobalSession"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int slang_createGlobalSession([NativeTypeName("SlangInt")] long apiVersion, [NativeTypeName("slang::IGlobalSession **")] IGlobalSession** outGlobalSession);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.slang_createGlobalSessionWithoutStdLib"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int slang_createGlobalSessionWithoutStdLib([NativeTypeName("SlangInt")] long apiVersion, [NativeTypeName("slang::IGlobalSession **")] IGlobalSession** outGlobalSession);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.slang_getEmbeddedStdLib"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "?slang_getEmbeddedStdLib@@YAPEAUISlangBlob@@XZ", ExactSpelling = true)]
    public static extern ISlangBlob* slang_getEmbeddedStdLib();

    /// <include file='Slang.xml' path='doc/member[@name="Slang.CompileRequest_getProgram"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spCompileRequest_getProgram", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int CompileRequest_getProgram([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("slang::IComponentType **")] IComponentType** outProgram);
